--- a/src/app/clientes-modulo/crear-cliente/crear-cliente.html
+++ b/src/app/clientes-modulo/crear-cliente/crear-cliente.html
@@ -1,1 +1,103 @@
-<p>crear-cliente works!</p>
+<div class="container-fluid">
+ <div class="col-4 p-3">
+   <div class="h4" i18n>Creación de Clientes</div>
+   <form
+     [formGroup]="clientForm"
+     (ngSubmit)="!clientForm.invalid && crearCliente(clientForm.value)"
+   >
+     <div class="form-group mx-sm-3 mb-2">
+       <label for="name"> Nombre Completo * </label>
+       <input
+         novalidate
+         id="name"
+         class="form-control"
+         formControlName="name"
+         placeholder="Introduzca su nombre completo"
+       />
+       <div
+         class="alert alert-danger alert-dismissible fade show"
+         *ngIf="
+           clientForm.get('name')?.hasError('required') &&
+           clientForm.get('name')?.touched
+         "
+       >
+         Name requiredo
+       </div>
+       <div
+         class="alert alert-danger alert-dismissible fade show"
+         *ngIf="
+           clientForm.get('name')?.hasError('minlength') &&
+           clientForm.get('name')?.touched
+         "
+       >
+         Nombre demasiado corto. Debe tener al menos 2 carácteres
+       </div>
+     </div>
+
+     <div class="form-group mx-sm-3 mb-2">
+       <label for="address"> Dirección * </label>
+       <input
+         id="address"
+         type="text"
+         class="form-control"
+         formControlName="address"
+         placeholder="Your Address"
+       />
+
+       <div
+         class="alert alert-danger alert-dismissible fade show"
+         *ngIf="
+           clientForm.get('address')?.hasError('required') &&
+           clientForm.get('address')?.touched
+         "
+       >
+         Dirección Requerida
+       </div>
+     </div>
+
+     <div class="form-group mx-sm-3 mb-2">
+       <label for="email"> Email * </label>
+       <input
+         id="email"
+         type="text"
+         class="form-control"
+         formControlName="email"
+         placeholder="Your Email"
+       />
+       <div
+         class="alert alert-danger alert-dismissible fade show"
+         *ngIf="
+           clientForm.get('email')?.hasError('required') &&
+           clientForm.get('email')?.touched
+         "
+       >
+         Email requiredo
+       </div>
+       <div
+         class="alert alert-danger alert-dismissible fade show"
+         *ngIf="
+           clientForm.get('email')?.touched &&
+           clientForm.get('email')?.hasError('email')
+         "
+       >
+         Formato incorrecto de email. Debe incluir @
+       </div>
+     </div>
+
+     <div class="row m-3 small">
+       <p>* Campos requeridos </p>
+     </div>
+
+     <div class="row m-3">
+       <button
+         type="submit"
+         class="btn btn-success"
+         [disabled]="!clientForm.valid"
+       >
+         Create
+       </button>
+
+     </div>
+   </form>
+ </div>
+</div>
