--- a/src/app/clientes-modulo/lista-de-clientes/lista-de-clientes.html
+++ b/src/app/clientes-modulo/lista-de-clientes/lista-de-clientes.html
@@ -1,7 +1,7 @@
 <h2> Lista de Clientes </h2>
 <ul>
     <li *ngFor="let cliente of clientes">
-        {{cliente.name}} - {{cliente.address}} - {{cliente.email}}
+        {{cliente.id}} - {{cliente.nombre}} - {{cliente.direccion}} - {{cliente.email}}
     </li>
 </ul>
 
