--- a/src/app/clientes-modulo/lista-de-clientes/lista-de-clientes.html
+++ b/src/app/clientes-modulo/lista-de-clientes/lista-de-clientes.html
@@ -1,8 +1,22 @@
 <h2> Lista de Clientes </h2>
-<ul>
-    <li *ngFor="let cliente of clientes">
-        {{cliente.id}} - {{cliente.nombre}} - {{cliente.direccion}} - {{cliente.email}}
-    </li>
-</ul>
+
+<table>
+    <thead>
+        <tr>
+            <th>ID del usuario</th>
+            <th>Nombre</th>
+            <th>Dirección</th>
+            <th>Email</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let cliente of clientes">
+            <td>#{{cliente.id}}</td>
+            <td>{{cliente.nombre}}</td>
+            <td>{{cliente.direccion}}</td>
+            <td>{{cliente.email}}</td>
+        </tr>
+    </tbody>
+</table>
 
 <p *ngIf="clientes.length === 0">No hay clientes todavía</p>
