--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,8 +1,18 @@
-<p>Bienvenidos Clientes</p>
-<nav>
-  <a routerLink="/clientes/crear-cliente">Crear Cliente</a>
-  <br>
-  <a routerLink="/clientes/lista-de-clientes">Ver lista de clientes</a>
-</nav>
+<header>
+  <h1>Bienvenidos Clientes</h1>
+  <nav>
+    <ul>
+      <li>
+         <a routerLink="/clientes/crear-cliente">Crear Cliente</a>
+      </li>
+      <li>
+         <a routerLink="/clientes/lista-de-clientes">Ver lista de clientes</a>
+      </li>
+    </ul>
+  </nav>
+</header>
 <router-outlet></router-outlet>
+
+
+
 
